Optimisation for the mobile view - word-wrap solved, fixing footer now

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@ body {
     -webkit-font-smoothing: antialiased;
     background-color: #b9d6f2;
     min-height: 400px;
-    margin-bottom: 100px;
+    margin-bottom: 200px;
     clear: both;
 }
 
